# StanTasq

./: .gitignore  README.adoc  justfile  nats-config.conf  pyproject.toml  start_nats.sh
StanTasq/: MyTask.py  StanTask.py  __init__.py  _all_tasks.py  _cmdstan_runner.py  _result_adapter.py  _utils.py  all_tasks.py  broker.py  calc_hash.py  cmdstan_runner.py  cmdstan_singleton.py  compute_context.py  data.py  engine_options.py  ifaces.py  ifaces2.py  init.py  iresult.py  main.py  model.py  normalized_model.py  raw_result.py  result_adapter.py  result_classes.py  stan_result_classes.py  utils.py
tests/: test_1.py  test_2.py  test_ObjectStore.py  test_basic.py  test_cov.py  test_errors.py  test_full_broker.py  test_full_broker2.py  test_hashes.py  test_infer_param_shapes.py  test_json.py  test_serialization.py  test_stan_task.py  test_stan_task_sync.py
