[tool.poetry]
name = "StanTasq"
version = "0.1.0"
description = ""
authors = ["Adam Ryczkowski <adam@statystyka.net>"]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.12"
taskiq = { version = "^0.11.10", optional = false, extras = ["reload"] }
loguru = "^0.7.3"
taskiq-dependencies = "^1.5.6"
anyio = "^4.7.0"
taskiq-nats = "^0.5.1"
cmdstanpy = "^1.2.5"
overrides = "^7.7.0"
numpy = "^2.2.1"
valuewitherror = {path = "/home/adam/Documents/praca/TrainerEngine/lib/ValueWithError"}
humanize = "^4.11.0"
prettytable = "^3.12.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#run-server = "mikapi:app.run"
